--- a/static/index.html
+++ b/static/index.html
@@ -3,45 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
+    <link rel="manifest" href="<%= webpackConfig.output.publicPath %>public/manifest.json" crossorigin="use-credentials">
+    <% if (htmlWebpackPlugin.options.includeAppleIcon) { %>
+    <link rel="apple-touch-icon" href="<%= webpackConfig.output.publicPath %>public/apple-touch-icon.png">
+    <% } %>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <%= styleTags %>
 </head>
-<body class="xh-dark">
-
-<!--
-    Inline script below runs low-level, pre-flight browser checks & sets up starting load timestamp.
-    This file is used as a template for hoist-dev-utils <= v5.3.0. Newer dev-utils versions
-    reference index-no-inline.html + w/a separate include of preflight.js.
--->
-<script type="text/javascript">
-    // Start load timer as early as possible - read later in XH.trackLoad().
-    window._xhLoadTimestamp = Date.now();
-
-    // Check browser compatibility with features / syntax we can't polyfill. Currently Mobx 5+ has
-    // a hard requirement for Proxy (test w/string access for max safety), which effectively filters
-    // out the browsers (ahem, IE11) we want to block hard and fast here.
-    (function(W) {
-        var D = document,
-            hasProxy = W['Proxy'];
-
-        if (!hasProxy) {
-            D.body.innerHTML = (
-                '<div style="margin:80px auto; font-family: sans-serif; width:450px; text-align:center; padding: 20px; border: 1px solid #ccc;">' +
-                'This application can not be loaded in your current browser<br/>' +
-                'due to missing support for modern web technologies.<br/><br/>' +
-                'Try again with an updated browser such as Chrome.' +
-                '</div>'
-            );
-            try {W.stop()} catch (e) {}
-            try {D.execCommand('Stop')} catch (e) {}
-        }
-    })(window);
-</script>
+<body class="xh-app" style="margin: 0">
 
 <noscript>
     This application requires that JavaScript be enabled for this site in your browser.
 </noscript>
 
-<div id="xh-root"></div>
+<div id="xh-preload-spinner" style="height: 100vh; width: 100vw; display: flex; align-items: center; justify-content: center;">
+    <img src="<%= webpackConfig.output.publicPath %>public/spinner.png" style="width: 50px; height: 50px;">
+</div>
 
+<div id="xh-root"></div>
+<%= scriptTags %>
 </body>
 </html>
