Remove viewport constraints on user-driven scaling/zoom
+ Fixes #3651

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="manifest" href="<%= webpackConfig.output.publicPath %>public/manifest.json" crossorigin="use-credentials">
     <% if (htmlWebpackPlugin.options.includeAppleIcon) { %>
     <link rel="apple-touch-icon" href="<%= webpackConfig.output.publicPath %>public/apple-touch-icon.png">
