Updates to static/README.md for clarity

--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+<!-- NOTE - see README regarding this file, and its newer replacement within hoist-dev-utils -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
